<resources>
    <string name="app_name">Wildlife GPS</string>
    <string name="login">Log In</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="register_label"><u>Register</u></string>
    <string name="no_acc_label">No account? </string>
    <string name="icon_desc">GPS Wildlife Icon</string>
    <string name="create_acc_button">Create Account</string>
    <string name="have_account">Already have an account?</string>
    <string name="log_in_text_button"><u>Log In</u></string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="map_view">Map View</string>
    <string name="cancel_text">Cancel</string>
    <string name="create_sighting_text">Create Sighting</string>
    <string name="title_text">Type of Animal</string>
    <string name="desc_text">Description</string>
    <string name="tag_hint">Enter tags seperated by a space</string>
    <string name="plus">+</string>
    <string name="create_found_listing">Create Listing</string>
    <string name="type_of_pet">Type of pet</string>
    <string name="pet_name">Name of pet</string>
    <string name="found_pet_desc">Additional details, contact information, etc.</string>
    <string name="list_view_str">List View</string>
    <string name="back_button_text">Back</string>
    <string name="flag_button_text">Flag</string>
    <string name="delete_sighting_test">Delete Sighting</string>
    <string name="learn_more_text">Learn More</string>
    <string name="animal_still_here_str">Is this animal still here?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="comment_str">Comments</string>
    <string name="add_comment_str">Add Comment</string>
    <string name="update_str">Update Sighting</string>
    <string name="request_str">Request Identification?</string>
    <string name="notifications_header_str">Notification Manager\ \ </string>
    <string name="notification_str">Toggle Notifications</string>
    <string name="off_str">Off</string>
    <string name="on_str">On</string>
    <string name="status_str">Status:</string>
    <string name="appearance_str">Appearance:</string>
    <string name="diet_str">Diet:</string>
    <string name="sighting_history_str">Sighting History:</string>
    <string name="sighting_type_str">Sighting Type\ \ </string>
    <string name="animal_sighting_str">Create a Wild Animal Sighting</string>
    <string name="lost_pet_str">Create a Lost Pet Post</string>
    <string name="found_pet_str">Create a Found Pet Post</string>
    <string name="identify_str">Help by identifying this animal in the comments</string>
    <string name="uploadStr">Upload Image</string>
    <string name="title_activity_map_view">Map</string>

</resources>
