<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="350dp"
        android:layout_height="527dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568">

        <TextView
            android:id="@+id/username_create_label"
            android:layout_width="82dp"
            android:layout_height="21dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/username_label"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/username_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.257"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.884" />

        <EditText
            android:id="@+id/username_create"
            android:layout_width="213dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_textbox"
            android:contentDescription="@string/username_label"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/password_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.782" />

        <TextView
            android:id="@+id/password_create_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/password_label"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/password_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.252"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_create"
            app:layout_constraintVertical_bias="0.608" />

        <EditText
            android:id="@+id/password_create"
            android:layout_width="213dp"
            android:layout_height="40dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/rounded_textbox"
            android:contentDescription="@string/password_label"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/password_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="213dp"
            android:layout_height="40dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/rounded_textbox"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/create_account"
            android:layout_width="201dp"
            android:layout_height="49dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:text="@string/create_acc_button"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.843" />

        <TextView
            android:id="@+id/login_instead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="17dp"
            android:text="@string/have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account"
            app:layout_constraintVertical_bias="0.084" />

        <Button
            android:id="@+id/login_redirect"
            android:layout_width="59dp"
            android:layout_height="20dp"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/log_in_text_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toEndOf="@+id/login_instead"
            app:layout_constraintTop_toBottomOf="@+id/create_account"
            app:layout_constraintVertical_bias="0.35000002" />

        <TextView
            android:id="@+id/password_confirm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/confirm_password"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/password_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.327"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_create" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/icon5"
        android:layout_width="252dp"
        android:layout_height="251dp"
        android:contentDescription="@string/icon_desc"
        android:src="@mipmap/ic_inapp_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>