<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:id="@+id/sighting_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_textbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons_container"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@drawable/rounded_textbox"
            android:orientation="vertical">

            <TextView
                android:id="@+id/common_species_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="0sp"
                android:layout_marginRight="15sp"
                android:padding="5dp"
                android:background="@color/colorAccent"
                android:ems="20"
                android:inputType="textPersonName"
                android:text="Common Species Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scientific_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:paddingTop="0dp"
                android:paddingStart="5dp"
                android:paddingBottom="5dp"
                android:background="@color/colorAccent"
                android:text="Scientific Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/identify_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="15sp"
                android:background="@color/colorAccent"
                android:text="@string/identify_str"
                android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="18sp" />

            <Button
                android:id="@+id/learn_more_btn"
                android:layout_width="162dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:background="@drawable/rounded_button"
                android:text="@string/learn_more_text"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/sighting_photo"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:layout_marginTop="10sp"
                tools:srcCompat="@tools:sample/avatars[2]" />

            <TextView
                android:id="@+id/poster_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="15sp"
                android:padding="5dp"
                android:background="@color/colorAccent"
                android:text="Username"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sighting_desc"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:padding="5dp"
                android:background="@color/colorAccent"
                android:inputType="textMultiLine"
                android:nestedScrollingEnabled="true"
                android:text="Description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/still_here_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="15sp"
                android:background="@color/colorAccent"
                android:text="@string/animal_still_here_str"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/animal_gone_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_background"
                    android:text="@string/no_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/animal_there_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/yes_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/comments_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/colorAccent"
                android:text="@string/comment_str"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comment_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:hint="Type a comment..."
                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/post_comment"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/add_comment_str"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/sighting_back_button"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_background"
            android:text="@string/back_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete_sighting"
            android:layout_width="94sp"
            android:layout_height="56dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_background"
            android:text="@string/delete_sighting_test"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp" />

        <Button
            android:id="@+id/updateSightingBtn"
            android:layout_width="94sp"
            android:layout_height="56dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_background"
            android:padding="15dp"
            android:text="@string/update_str"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            android:typeface="normal" />

        <Button
            android:id="@+id/flag_sighting"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_background"
            android:text="@string/flag_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>