<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="425dp"
        android:layout_height="615dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/sighting_title_create"
            android:layout_width="309dp"
            android:layout_height="47dp"
            android:autofillHints=""
            android:background="@drawable/rounded_textbox"
            android:ems="10"
            android:hint="@string/title_text"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.221" />

        <EditText
            android:id="@+id/sighting_desc_create"
            android:layout_width="309dp"
            android:layout_height="145dp"
            android:background="@drawable/rounded_textbox"
            android:ems="10"
            android:hint="@string/desc_text"
            android:inputType="textMultiLine|textPersonName"
            android:maxLines="6"
            android:nestedScrollingEnabled="true"
            android:singleLine="false"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sighting_title_create"
            app:layout_constraintVertical_bias="0.074" />

        <EditText
            android:id="@+id/sighting_tags_create"
            android:layout_width="309dp"
            android:layout_height="94dp"
            android:background="@drawable/rounded_textbox"
            android:ems="10"
            android:hint="@string/tag_hint"
            android:inputType="textMultiLine|textPersonName"
            android:nestedScrollingEnabled="true"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sighting_desc_create"
            app:layout_constraintVertical_bias="0.118" />

        <Button
            android:id="@+id/cancel_create_sighting"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/rounded_textbox"
            android:text="@string/cancel_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sighting_tags_create"
            app:layout_constraintVertical_bias="0.24" />

        <Button
            android:id="@+id/create_sighting"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/rounded_button"
            android:text="@string/create_sighting_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toEndOf="@+id/cancel_create_sighting"
            app:layout_constraintTop_toBottomOf="@+id/sighting_tags_create"
            app:layout_constraintVertical_bias="0.246" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/sighting_photo"
        android:layout_width="214dp"
        android:layout_height="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        tools:srcCompat="@tools:sample/avatars[3]" />
</androidx.constraintlayout.widget.ConstraintLayout>